// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`semver - should those tests break, consider releasing a new major version of the package dependencies 1`] = `
Object {
  "eslint-plugin-import": "^2.14.0",
  "eslint-plugin-jsx-a11y": "^6.1.1",
  "eslint-plugin-react": "^7.11.1",
}
`;

exports[`semver - should those tests break, consider releasing a new major version of the package devDependencies 1`] = `
Object {
  "eslint": "^5.6.0",
  "eslint-config-airbnb": "^17.1.0",
  "eslint-config-prettier": "^3.0.1",
}
`;

exports[`semver - should those tests break, consider releasing a new major version of the package peerDependencies 1`] = `
Object {
  "eslint": "^5.6.0",
}
`;
